--- a/SelahSeries/Views/Shared/_Layout.cshtml
+++ b/SelahSeries/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Demo project">
+    <meta name="google-site-verification" content="O5gmpVX6loi9HEm3mR7ddeC7b0FZglILI2VlXRMTzCo" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     @if (IsSectionDefined("AddMetaTags"))
     {
@@ -71,7 +72,7 @@
                                             Blog
                                         </a>
                                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                            <a class="dropdown-item" href="~/?category=relationship_and_marriage#blog">Relationship & Marriage</a>
+                                            <a class="dropdown-item" href="~/?category=relationship_and_marriage#blog">Relationship and Marriage</a>
                                             <a class="dropdown-item" href="~/?category=sports#blog">Sports</a>
 
                                             <a class="dropdown-item" href="~/?category=politics#blog">Politics</a>
