worked on ministers/index

--- a/SelahSeries/Views/Support/Index.cshtml
+++ b/SelahSeries/Views/Support/Index.cshtml
@@ -40,7 +40,7 @@
                                     <div class="card-body  text-center">
                                         <p><img class=" img-fluid" src="/NewFolder2/ministers/Omisore.jpg" alt="card image"></p>
                                         <h4 class="card-title">Dr. & Dr. Mrs A.G Omisore</h4>
-                                        <p class="card-text">Physicians and marriage counselors. </p>
+                                        <p class="card-text">Physicians and Marriage Counselors. </p>
                                         <a href="#" class="btn btn-sm button"><i class="fa fa-plus"></i></a>
                                     </div>
                                 </div>
@@ -67,7 +67,7 @@
                                     <div class="card-body text-center">
                                         <p><img class=" img-fluid" src="~/NewFolder2/ministers/Faleye2.jpeg" alt="card image"></p>
                                         <h4 class="card-title">Prophet Iyiola Folorunsho Faleye</h4>
-                                        <p class="card-text">Retired nurse, Pastor, intercessor and counselor. </p>
+                                        <p class="card-text">Retired Nurse, Pastor, Intercessor and Counselor. </p>
                                         <a href="#" class="btn btn-sm button"><i class="fa fa-plus"></i></a>
                                     </div>
                                 </div>
@@ -94,7 +94,7 @@
                                     <div class="card-body text-center">
                                         <p><img class=" img-fluid" src="~/NewFolder2/ministers/ganiyu.jpg" alt="card image"></p>
                                         <h4 class="card-title">Oluwatofunmi Kehinde Ganiyu</h4>
-                                        <p class="card-text">Teacher and relationship enthusiast.</p>
+                                        <p class="card-text">Teacher and Relationship Enthusiast.</p>
                                         <a href="#" class="btn btn-sm button"><i class="fa fa-plus"></i></a>
                                     </div>
                                 </div>
@@ -123,7 +123,7 @@
                                     <div class="card-body text-center">
                                         <p><img class=" img-fluid" src="~/NewFolder2/ministers/Oyinloye.jpg" alt="card image"></p>
                                         <h4 class="card-title">Rev. Adesola Oyinloye</h4>
-                                        <p class="card-text">Retired nurse, Pastor, intercessor, and counselor. </p>
+                                        <p class="card-text">Retired Nurse, Pastor, Intercessor, and Counselor. </p>
                                         <a href="#" class="btn btn-sm button"><i class="fa fa-plus"></i></a>
                                     </div>
                                 </div>
@@ -150,7 +150,7 @@
                                     <div class="card-body text-center">
                                         <p><img class=" img-fluid" src="~/NewFolder2/ministers/Orioke.jpg" alt="card image"></p>
                                         <h4 class="card-title">Pastor(Dr.) Samuel Odunlami Orioke</h4>
-                                        <p class="card-text">Retired medical doctor, Pastor, marriage counselor and life coach. </p>
+                                        <p class="card-text">Retired Medical Doctor, Pastor, Marriage Counselor and Life Coach. </p>
                                         <a href="#" class="btn btn-sm button"><i class="fa fa-plus"></i></a>
                                     </div>
                                 </div>
@@ -177,7 +177,7 @@
                                     <div class="card-body text-center">
                                         <p><img class=" img-fluid" src="~/NewFolder2/ministers/Adewoyin.jpg" alt="card image"></p>
                                         <h4 class="card-title">Oyenike Adewoyin</h4>
-                                        <p class="card-text">Nurse, marriage counselor and sexuality coach</p>
+                                        <p class="card-text">Nurse, Marriage Counselor and Sexuality Coach</p>
                                         <a href="#" class="btn btn-sm button"><i class="fa fa-plus"></i></a>
                                     </div>
                                 </div>
@@ -204,7 +204,7 @@
                                     <div class="card-body text-center">
                                         <p><img class=" img-fluid" src="https://sunlimetech.com/portfolio/boot4menu/assets/imgs/team/img_03.png" alt="card image"></p>
                                         <h4 class="card-title">Elijah Oluwamayowa & Oluwafeyikemi Eunice Popoola</h4>
-                                        <p class="card-text">University administrator and nurse lecturer respectively; youth pastors. </p>
+                                        <p class="card-text">University Administrator and Nurse, Lecturer Respectively; Youth Pastors. </p>
                                         <a href="#" class="btn btn-sm button"><i class="fa fa-plus"></i></a>
                                     </div>
                                 </div>
@@ -235,7 +235,7 @@
                                         <h4 class="card-title">
                                             Professors Adesegun and Olawuni Fatusi
                                         </h4>
-                                        <p class="card-text">University Professors, mentors and marriage enthusiasts. </p>
+                                        <p class="card-text">University Professors, Mentors and Marriage Enthusiasts. </p>
                                         <a href="#" class="btn btn-sm button"><i class="fa fa-plus"></i></a>
                                     </div>
                                 </div>
